overflow-fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
   height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .search-container {
   width: 50%;
-  margin: 10rem auto;
-  /* height: 100%; */
+  margin-top: 10rem;
 }
